Java 17 Pattern matching. Fix checkstyle errors